change the text

--- a/holidays.html
+++ b/holidays.html
@@ -67,7 +67,7 @@ body, html {
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-green w3-wide">HOLIDAYS IN AUGUST</span></h5>
-    <p>This is the subject of "Holidays in august" in session 10 of Web Engineering.</p>
+    <p>This is my website about summer.</p>
     <p>I'm basically planning to study during the summer. However, I also want to have fun during the summer, so I plan to enjoy myself in my own way. If I could afford it, I'd like to go to Tokyo and walk around a lot.</p>
 
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-green w3-wide"><a href = "https://427brt.wordpress.com/" target="_blank">ABOUT ME</a></span></h5>
